force-app/main/default/objects/Rating__c/fields/Rating_given_to_which_Student__c.field-meta.xml
<CustomField>
    <fullName>Rating_given_to_which_Student__c</fullName>
    <label>Rating given to which Student</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Student__c.Domain__c</field>
            <operation>equals</operation>
            <value>Cloud, Core Languages</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Ratings</relationshipLabel>
    <relationshipName>Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>