force-app/main/default/objects/Rating__c/fields/Rating_out_of_10__c.field-meta.xml
<CustomField>
    <fullName>Rating_out_of_10__c</fullName>
    <label>Rating out of 10</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>